# SQ-T-Homework2-WordCount

./: .gitignore  CMakeLists.txt  CWordCount.cpp  CWordCount.h  UnitTest1__Argparse.cpp  UnitTest1__Base.cpp  UnitTest2__counting.cpp  WordCount_test_basic.cpp  WordCount_test_basic.h  input.txt  main.cpp
unittest2_testinputs/: test1.txt  test2.txt  test3.txt  test4.txt
